# movie-recommender-crew

./: README.md  apis.txt  devcontainer.json  fixing_codespace.md  fixing_codespace.txt
movie_recommender/: README.md  pyproject.toml
movie_recommender/io/: output.md  output.txt  report.md
movie_recommender/mcp/: server.py
movie_recommender/movie_recommender/: main.py
movie_recommender/movie_recommender/config/: agents.yaml  tasks.yaml
movie_recommender/movie_recommender/tools/: movie_api_tool.py
movie_recommender/src/movie_recommender/: crew.py  main.py
movie_recommender/src/movie_recommender/config/: agents.yaml  tasks.yaml
movie_recommender/src/movie_recommender/mcp/: server.py
movie_recommender/src/movie_recommender/tools/: movie_api_tool.py
movie_recommender/test_data/: test_movies.json
test_data/: recent_test_movies.json
